# link-commands

./: README.md  delete_script.txt  main.py
example/: CMakeLists.txt  a.cpp  a.h  a1.cpp  a1.h  b.cpp  c.cpp  c.h  link_command_makefile.json  link_commands_ninja.json  maina.cpp  mainb.cpp
